--- a/css/style-ab.css
+++ b/css/style-ab.css
@@ -130,8 +130,7 @@ align-items: center;
    width: 100%;
    text-align: center;
    padding: 30px 0;
-   
- }
+  }
  .footer h3{
    font-size: 25px;
    margin-bottom: 25px;
@@ -142,24 +141,21 @@ align-items: center;
    font-size: 15px;
    font-family: 'Times New Roman', Times, serif;
    padding-bottom: 20px;
- }
-   .social-icon{
+  }
+  .social-icon{
      padding-top: 20px;
      margin: 0 15px;
      cursor: pointer;
- 
    }
- 
-   .newsletter-form {
+  .newsletter-form{
     margin: auto;
     display: flex;
-    flex-flow: column wrap;
     max-width: 300px;
     padding: 15px;
     outline: none;
-    border: 1px solid salmon;
-    box-sizing: border-box;
+    justify-content: center;
     align-items: center;
+    border: 1px solid salmon;
   }
   
   label {
@@ -167,17 +163,19 @@ align-items: center;
   }
   
   input[type="email"],
-  input[type="submit"] {
-    padding: 10px;
+  input[type="submit"]{
+    padding: 5px;
+    margin: 0 5px 0 5px;
     border: 1px solid #ccc;
     border-radius: 4px;
     margin-bottom: 5px;
   }
   
   input[type="submit"] {
-    width: 100px;
+    width: 80px;
     background-color: salmon;
     color: #fff;
     cursor: pointer;
   }
+
   
