--- a/css/style-ab.css
+++ b/css/style-ab.css
@@ -2,8 +2,6 @@
   margin: 0;
   padding: 0;
 }    
-    
-    
 html{
   font-family: 'Dancing Script', cursive;
   }
@@ -16,7 +14,6 @@ html{
   text-align: center;
   color: white;
  }
-
  nav{
       display: flex;
       padding: 3em;
@@ -30,7 +27,7 @@ html{
  .links ul li{
     list-style-type: none;
     display:inline-block;
-    padding: 8px 12px;
+    padding: 5px 12px;
     position: relative;
  }
  .links ul li a{
@@ -39,22 +36,18 @@ html{
   font-size: 23px;
   border-bottom: 1px solid salmon;
  }
-
  .links ul li a:hover{
   border-bottom: 1px solid aqua;
-
  }
-
  h1{
   font-size: 80px;
   text-align: center;
- 
  }
  .about{
    width: 80%;
    margin: auto;
    padding-top: 80px;
-   padding-bottom: 50px;
+   padding-bottom: 30px;
  }
  .row{
 display:flex;
@@ -68,7 +61,7 @@ align-items: center;
  .about-us img{
   width: 80%;
   height: 60%;
-    border-radius: 10px;
+  border-radius: 10px;
  }
 .about-us h2{
    font-size: 30px;
@@ -104,26 +97,25 @@ align-items: center;
 
 /* News-letter form */
 
- @media(max-width:700px){
-  h1{
-    font-size: 40px;
- 
-   }
-   .links ul li{
-      display: flex;
-      flex: 1;
-      justify-content: center;}
-   }
-   @media(max-width:700px){
- 
-    .row{
+ @media(max-width:600px){
+
+  .links ul li{
+    display: flex;
+    flex: 1;
+    justify-content:center;}
+  }
+   @media(max-width:600px){
+.h1{
+  font-size: 30px;
+}
+  .row{
      flex-direction: column;
-       }
-       .newsletter-form{
-        max-width: 200px;
-      }
     }
-    
+  .newsletter-form{
+    flex-direction: column;
+    max-width: 200px;
+  }
+} 
   
   /*Footer*/
   .footer{
@@ -150,7 +142,7 @@ align-items: center;
   .newsletter-form{
     margin: auto;
     display: flex;
-    max-width: 300px;
+    max-width: 280px;
     padding: 15px;
     outline: none;
     justify-content: center;
