--- a/css/style-ex.css
+++ b/css/style-ex.css
@@ -1,9 +1,7 @@
 *{
   margin: 0;
   padding: 0;
-}    
-    
-    
+}       
 html{
   font-family: 'Dancing Script', cursive;
   }
@@ -13,10 +11,8 @@ html{
   background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(../img/explore.jpg);
   background-size: cover;
   background-position: center;
- 
   color: white;
  }
-
  nav{
       display: flex;
       padding: 2em;
@@ -39,35 +35,25 @@ html{
   font-size: 23px;
   border-bottom: 1px solid salmon;
  }
-
  .links ul li a:hover{
   border-bottom: 1px solid aqua;
-
  }
-
  header h1{
   font-size: 80px;
   text-align: center;
-
-  
  }
 .explore h3{
   font-size: 30px;
   text-align: left;
   border-bottom: 1px solid salmon;
   padding-top: 30px;
- 
 }
-
-
  article{
   width: 70%;
   margin: auto;
   padding-top: 80px;
   padding-bottom: 50px;
- 
 }
-
 .container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -75,7 +61,7 @@ html{
   margin: 20px 0 30px 0;
 }
  .container img{
-  width:70%;
+  width:140px;
   border-radius: 5px;
   height: 100%;
  }
@@ -83,19 +69,24 @@ html{
   box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.4);
   cursor: pointer;
  }
- 
+
+.price{
+  padding-left: 40px;
+}
+.rom {
+  width: 140px;
+}
 .price .button{
   width: 60px;
   height: 30px;
   display: block;
   text-align: center;
   border: 1px solid salmon;
- font-size: 20px;
- font-family: 'Times New Roman', Times, serif;
- text-decoration: none;
- border-radius: 25px;
+  font-size: 20px;
+  font-family: 'Times New Roman', Times, serif;
+  text-decoration: none;
+  border-radius: 25px;
 }
-
 .price .button:hover{
   background-color: salmon;
   color: white;
@@ -103,16 +94,13 @@ html{
 }
  @media(max-width:700px){
   header h1{
-    
     font-size: 30px;
-   
    }
    .links ul li{
       display: flex;
       flex: 1;
       justify-content: center;}
    }
- 
     @media (max-width: 600px) {
       .container {
         grid-template-columns: 1fr; /* Change to a single column */
@@ -149,6 +137,5 @@ html{
      padding-top: 20px;
      margin: 0 15px;
      cursor: pointer;
- 
    }
  
