--- a/css/style-land.css
+++ b/css/style-land.css
@@ -1,64 +1,140 @@
 *{
-    margin: 0;
-    padding: 0;
-  }    
-  html{
-    font-family: 'Dancing Script', cursive;
-    }
-    header{
-        min-height: 100vh;
-        width: 100%;
-        background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(../img/pattern.jpg);
-        background-size: cover;
-        background-position: center;
-        position: relative;
-    }
-      
-   nav{
-        display: flex;
-        padding: 3em;
-        justify-content: space-between;
-        align-items: center;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}    
+    
+    
+html{
+  font-family: 'Dancing Script', cursive;
+  }
+  section{
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    padding: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(../img/pattern.jpg);
+    background-size: cover;
+    background-position: center;
+  }
+ header{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+ }
+
+ nav{
+      display: flex;
+      padding: 2em;
+      justify-content: space-between;
+      align-items: center;
+ }
+ .links{
+    flex: 1;
+    text-align: right;
+ }
+ .links ul li{
+    list-style-type: none;
+    display:inline-block;
+    padding: 8px 12px;
+    position: relative;
+ }
+ .links ul li a{
+  color: azure;
+  text-decoration: none;
+  font-size: 20px;
+  border-bottom: 1px solid salmon;
+ }
+
+ .links ul li a:hover{
+  border-bottom: 1px solid aqua;
+
+ }
+
+ .text-box{
+  width: 90%;
+  color:azure;
+  position: absolute;
+  top: 50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  text-align: center;
+ }
+ .text-box h2{
+  font-size: 40px;
+  text-align: left;
+  margin: 30px 0 40px;
+  padding-top: 20px;
+ }
+ .text-box p{
+  margin: 30px 0 40px;
+  font-size: 20px;
+  text-align: left;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 300;
+ }
+ 
+ .content{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
    }
-   .links{
-      flex: 1;
-      text-align: right;
+   .text-box{
+     flex-basis: 48%;
+     padding: 30px 2px;
    }
-   .links ul li{
-      list-style-type: none;
-      display:inline-block;
-      padding: 5px 12px;
-      position: relative;
+   .text-box img{
+    margin-left: 700px;
+    width: 35%;
+    height: 60%;
    }
-   .links ul li a{
-    color: azure;
+.content .text-box span{
+  color: aqua;
+  font-size: 20px;
+  font-weight:400;
+}
+   .button{
+    display: inline-block;
     text-decoration: none;
-    font-size: 23px;
-    border-bottom: 1px solid salmon;
-   }
-   .links ul li a:hover{
-    border-bottom: 1px solid aqua;
-   }
-
-.textBox{
- width: 90%;
- color:azure;
- position: absolute;
- top: 50%;
- left:50%;
- transform: translate(-50%,-50%);
- text-align: center;
-}
-.textBox h2{
- font-size: 100px;
- text-align: center;
- margin: 30px 0 40px;
- padding-top: 20px;
-}
-
+    color:white;
+    border: 1px solid white;
+    padding: 12px 34px;
+    font-size: 17px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+    align-items: center;
+    
   
-  
-    /*Footer*/
+   }
+   .button:hover{
+   border: 1px solid salmon;
+   background-color: salmon;
+   transition: 1s;
+   }
+/* Making it responsive */
+@media(max-width:600px){
+
+  .links ul li{
+    display: flex;
+    flex: 1;
+    justify-content:center;}
+  }
+.h1{
+  font-size: 30px;
+}
+  .content{
+     flex-direction: column;
+    }
+    /*Footer
     .footer{
      width: 100%;
      text-align: center;
@@ -79,4 +155,4 @@
        padding-top: 20px;
        margin: 0 15px;
        cursor: pointer;
-     }
+     }*/
