--- a/css/style-land.css
+++ b/css/style-land.css
@@ -11,7 +11,6 @@ html{
   article{
     position: relative;
     width: 100%;
-    min-height: 100vh;
     padding: 100px;
     display: flex;
     justify-content: space-between;
@@ -32,28 +31,31 @@ html{
   align-items: center;
  }
 
-
- .links ul{
-  position: relative;
+ nav{
   display: flex;
-  text-align: right;
- }
- .links ul li{
-    list-style-type: none;
- }
- .links ul li a{
-  display: inline-block;
-  color: azure;
-  text-decoration: none;
-  font-weight: 400;
-  font-size: 20px;
-  border-bottom: 1px solid salmon;
-  margin-left: 40px;
- }
-
- .links ul li a:hover{
-  border-bottom: 1px solid aqua;
- }
+  padding: 3em;
+  justify-content: space-between;
+  align-items: center;
+}
+.links{
+flex: 1;
+text-align: right;
+}
+.links ul li{
+list-style-type: none;
+display:inline-block;
+padding: 5px 12px;
+position: relative;
+}
+.links ul li a{
+color: azure;
+text-decoration: none;
+font-size: 23px;
+border-bottom: 1px solid salmon;
+}
+.links ul li a:hover{
+border-bottom: 1px solid aqua;
+}
  .text-box{
   width: 90%;
   color:azure;
@@ -62,6 +64,7 @@ html{
   left:50%;
   transform: translate(-50%,-50%);
   text-align: center;
+  margin-right: auto;
  }
  .text-box h2{
   font-size: 40px;
@@ -76,7 +79,7 @@ html{
   font-family: 'Times New Roman', Times, serif;
   font-weight: 300;
  }
-.content .text-box span{
+  .text-box span{
   color: aqua;
   font-size: 20px;
   font-weight:600;
@@ -84,9 +87,9 @@ html{
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 100vw;
   position: relative;
-  margin-left: 600px;
+  margin-top: 5%;
 }
 
 /* Hide the images by default */
@@ -95,35 +98,48 @@ html{
 }
 
 .mySlides img{
-  width: 250px;
+  vertical-align: middle;
+  width: 100%;
   height: 400px;
 }
 
 /* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+.prev,
+.next {
+   cursor: pointer;
+   position:absolute;
+   width: auto;
+   margin-top: auto;
+   color: white;
+   font-weight: bold;
+   font-size: 18px;
+   transition: 0.6s;
+   border-radius: 0 3px 3px 0;
+   user-select: none;
+   
 }
 
 /* Position the "next button" to the right */
-.next {
+.next{
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+.text {
+  color: azure;
+  font-size: 15px;
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  margin-top: 20px;
+}
+
+@media only screen and (max-width: 300px) {
+  .prev,
+  .next,
+  text {
+     font-size: 11px;
+  }
 }
 
 .button{
@@ -145,24 +161,34 @@ html{
    }
 
    @media(max-width:700px){
-     .links ul li a{
+     .links ul li{
         display: flex;
         flex: 1;
-        justify-content:center;}
-     }
-     .content h2{
-      font-size: 30px;
-     }
-     .content p{
-      font-size: 20px;
+        justify-content:center;
+      }
+      .links ul li a{
+        font-size: 15px;
+      }
     }
-   
-     @media(max-width:700px){
-     
-      .mySlides{
-        width: 200px;
-        height: 300px;
+   @media(max-width:700px){
+      .text-box{
         flex-direction: column;
+       
       }
+      .text-box h2{
+        font-size: 20px;
+        
+      }
+      .text-box p{
+        font-size: 12px;
+       
+      }
+    }
+    @media (max-width: 700px) {
+      .mySlides img {
+        max-width: 100%;
+        height: auto;
+        margin-top: 50em;
+      }
+    }
       
-      }
