--- a/css/style-ct.css
+++ b/css/style-ct.css
@@ -147,6 +147,11 @@ span{
  color: aliceblue;
  transition: 1s;
  }
+
+ .contact-2 div{
+  color: red;
+
+ }
  @media(max-width:600px){
   header h1{
     font-size: 30px;
