--- a/css/style-ct.css
+++ b/css/style-ct.css
@@ -150,6 +150,8 @@ span{
 
  .contact-2 div{
   color: red;
+  text-align: left;
+  margin-left: 12em;
 
  }
  @media(max-width:600px){
@@ -175,9 +177,15 @@ span{
     .contact-2{
       
         flex-direction: column;
+        
           }
     }
-
+    @media(max-width:600px){
+      .contact-2 div{
+        margin-left: auto;
+        text-align: center;
+      }
+    }
   /*Footer*/
   .footer{
    width: 100%;
